--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "node": "16.x"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-axios": "^3.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
